---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: shadowing.md - Shadowing - Implicit function shadowing
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/shadowing.md
---

# Python source files

## mdtest_snippet.py

```
1 | def f(): ...
2 | 
3 | f = 1  # error: [invalid-assignment]
```

# Diagnostics

```
error: lint:invalid-assignment: Implicit shadowing of function `f`
 --> src/mdtest_snippet.py:3:1
  |
1 | def f(): ...
2 |
3 | f = 1  # error: [invalid-assignment]
  | ^
  |
info: Annotate to make it explicit if this is intentional
info: `lint:invalid-assignment` is on by default

```
